--- a/perfil.html
+++ b/perfil.html
@@ -13,7 +13,7 @@
   
   <!-- Firebase Modular SDK e Firestore -->
   <script type="module">
-    // Importações dos módulos Firebase
+    // Importações do Firebase
     import { initializeApp } from "https://www.gstatic.com/firebasejs/10.5.0/firebase-app.js";
     import {
       getAuth,
@@ -29,27 +29,27 @@
       setDoc
     } from "https://www.gstatic.com/firebasejs/10.5.0/firebase-firestore.js";
 
-    // Configuração do Firebase – substitua pelos seus dados no lugar dos placeholders
+    // Configuração do Firebase – substitua pelos seus dados reais
     const firebaseConfig = {
-  apiKey: "AIzaSyDGBKxvfcY-PA_vC7SA8G0f-TjqjK3OD3o",
-  authDomain: "swifthubcatalao.firebaseapp.com",
-  projectId: "swifthubcatalao",
-  storageBucket: "swifthubcatalao.firebasestorage.app",
-  messagingSenderId: "756803145076",
-  appId: "1:756803145076:web:097f4d3d5b28cc6ca1f021"
-};
+      apiKey: "AIzaSyDGBKxvfcY-PA_vC7SA8G0f-TjqjK3OD3o",
+      authDomain: "swifthubcatalao.firebaseapp.com",
+      projectId: "swifthubcatalao",
+      storageBucket: "swifthubcatalao.firebasestorage.app",
+      messagingSenderId: "756803145076",
+      appId: "1:756803145076:web:4593bd78a26a2270a1f021"
+    };
 
-// Inicializando o Firebase
-const app = initializeApp(firebaseConfig);
-const auth = getAuth(app);
-const db = getFirestore(app);
+    const app = initializeApp(firebaseConfig);
+    const auth = getAuth(app);
+    // Se estiver testando localmente, use a linha abaixo para desativar a verificação do reCAPTCHA (NÃO use em produção)
+    auth.settings && (auth.settings.appVerificationDisabledForTesting = true);
+    const db = getFirestore(app);
 
-    // Variáveis para gerenciamento do SMS e reCAPTCHA
-    let confirmationResult = null;
-    let recaptchaVerifier = null;
+    let confirmationResult = null;  // Resultado da verificação SMS
+    let recaptchaVerifier = null;    // Objeto reCAPTCHA
 
     /* --- Inactivity Logout Logic --- */
-    const INACTIVITY_TIMEOUT = 30 * 60 * 1000; // 30 minutos em milissegundos
+    const INACTIVITY_TIMEOUT = 30 * 60 * 1000; // 30 minutos
     let logoutTimer = null;
     function resetTimer() {
       if (logoutTimer) clearTimeout(logoutTimer);
@@ -79,7 +79,7 @@ const db = getFirestore(app);
     }
     /* --- End Inactivity Logout Logic --- */
 
-    // Função para salvar ou atualizar os dados do perfil no Firestore
+    // Função para salvar ou atualizar automaticamente os dados do perfil (email, nome, telefone e endereço)
     async function saveUserProfile(user) {
       const userDocRef = doc(db, "users", user.uid);
       try {
@@ -87,7 +87,7 @@ const db = getFirestore(app);
           email: user.email || "",
           name: user.displayName || "",
           phone: user.phoneNumber || "",
-          address: "" // Pode ser atualizado posteriormente
+          address: "" // Pode ser atualizado depois
         }, { merge: true });
         console.log("Perfil salvo/atualizado no Firestore!");
       } catch (e) {
@@ -95,7 +95,7 @@ const db = getFirestore(app);
       }
     }
 
-    // Detecta o estado de autenticação e realiza as chamadas necessárias
+    // Chama as funções após a autenticação
     onAuthStateChanged(auth, async (user) => {
       const logoutBtn = document.getElementById("logoutButton");
       if (user) {
@@ -113,7 +113,7 @@ const db = getFirestore(app);
       }
     });
 
-    // Preenche os campos do formulário com os dados do perfil armazenado no Firestore
+    // Preenche o formulário com os dados do perfil armazenado no Firestore
     async function displayUserProfile(user) {
       const emailElement = document.getElementById("userEmail");
       if (emailElement) {
@@ -142,8 +142,9 @@ const db = getFirestore(app);
         }
         if (sendCodeSection) sendCodeSection.style.display = "none";
         if (verifyCodeSection) verifyCodeSection.style.display = "none";
-        const recaptchaEl = document.getElementById("recaptcha-container");
-        if (recaptchaEl) recaptchaEl.style.display = "none";
+        if (document.getElementById("recaptcha-container")) {
+          document.getElementById("recaptcha-container").style.display = "none";
+        }
       } else {
         if (phoneStatus) {
           phoneStatus.innerText = "Telefone não verificado.";
@@ -151,8 +152,9 @@ const db = getFirestore(app);
         }
         if (sendCodeSection) sendCodeSection.style.display = "block";
         if (verifyCodeSection) verifyCodeSection.style.display = "none";
-        const recaptchaEl = document.getElementById("recaptcha-container");
-        if (recaptchaEl) recaptchaEl.style.display = "block";
+        if (document.getElementById("recaptcha-container")) {
+          document.getElementById("recaptcha-container").style.display = "block";
+        }
       }
 
       try {
@@ -187,33 +189,45 @@ const db = getFirestore(app);
       }
     }
 
-    // Inicializa o reCAPTCHA (modo produção)
+    // Inicializa o reCAPTCHA para verificações via SMS
     function initializeRecaptcha(user) {
       const recaptchaEl = document.getElementById("recaptcha-container");
       if (!user || user.phoneNumber) {
         if (recaptchaEl) recaptchaEl.style.display = "none";
         return;
       }
-      recaptchaVerifier = new RecaptchaVerifier('recaptcha-container', {
-        size: 'normal',
-        callback: () => {
-          console.log("reCAPTCHA resolvido!");
-          const sendBtn = document.getElementById("sendCodeButton");
-          if (sendBtn) sendBtn.disabled = false;
-        },
-        'expired-callback': () => {
-          console.log("reCAPTCHA expirado. Resolva novamente.");
+      if (!recaptchaVerifier) {
+        recaptchaVerifier = new RecaptchaVerifier('recaptcha-container', {
+          'size': 'normal',
+          'callback': (response) => {
+            console.log("reCAPTCHA resolvido!");
+            const sendBtn = document.getElementById("sendCodeButton");
+            if (sendBtn) sendBtn.disabled = false;
+          },
+          'expired-callback': () => {
+            console.log("reCAPTCHA expirado. Resolva novamente.");
+            const sendBtn = document.getElementById("sendCodeButton");
+            if (sendBtn) sendBtn.disabled = true;
+            recaptchaVerifier.render().then(widgetId => grecaptcha.reset(widgetId));
+          }
+        }, auth);
+
+        recaptchaVerifier.render().then(widgetId => {
+          console.log("reCAPTCHA renderizado. Widget ID:", widgetId);
           const sendBtn = document.getElementById("sendCodeButton");
           if (sendBtn) sendBtn.disabled = true;
-          recaptchaVerifier.render().then(widgetId => grecaptcha.reset(widgetId));
-        }
-      }, auth);
-      recaptchaVerifier.render().then(widgetId => {
-        console.log("reCAPTCHA renderizado com ID:", widgetId);
-      });
+        });
+      } else {
+        recaptchaVerifier.render().then(widgetId => {
+          if (recaptchaEl) recaptchaEl.style.display = "block";
+          grecaptcha.reset(widgetId);
+          const sendBtn = document.getElementById("sendCodeButton");
+          if (sendBtn) sendBtn.disabled = true;
+        });
+      }
     }
 
-    // Envia o código SMS (adicionando "+55" se necessário)
+    // Envia o código SMS (adiciona "+55" se necessário)
     async function handleSendCode(event) {
       event.preventDefault();
       const phoneInput = document.getElementById("userPhone");
@@ -254,7 +268,7 @@ const db = getFirestore(app);
       }
     }
 
-    // Verifica o código SMS inserido
+    // Verifica o código SMS digitado
     async function handleVerifyCode(event) {
       event.preventDefault();
       const verificationCodeInput = document.getElementById("verificationCode");
@@ -282,15 +296,13 @@ const db = getFirestore(app);
         phoneStatusMessage.style.color = "green";
         verifyCodeSection.style.display = "none";
         phoneInput.disabled = true;
-        const phoneStatus = document.getElementById("phoneVerificationStatus");
-        if (phoneStatus) {
-          phoneStatus.innerText = "Telefone verificado: " + user.phoneNumber;
-          phoneStatus.style.color = "green";
-        }
-        const recaptchaEl = document.getElementById("recaptcha-container");
-        if (recaptchaEl) recaptchaEl.style.display = "none";
+        document.getElementById("phoneVerificationStatus").innerText =
+          "Telefone verificado: " + user.phoneNumber;
+        document.getElementById("phoneVerificationStatus").style.color = "green";
+        document.getElementById("recaptcha-container").style.display = "none";
+
         const userDocRef = doc(db, "users", user.uid);
-        await setDoc(userDocRef, { phone: user.phoneNumber }, { merge: true });
+        await setDoc(userDocRef, { phoneNumber: user.phoneNumber }, { merge: true });
         console.log("Número de telefone salvo no Firestore.");
       } catch (error) {
         console.error("Erro ao verificar código:", error);
@@ -300,7 +312,7 @@ const db = getFirestore(app);
       }
     }
 
-    // Salva os dados pessoais (nome e endereço)
+    // Salva os dados pessoais do perfil (nome e endereço)
     async function handleSaveProfile(event) {
       event.preventDefault();
       const user = auth.currentUser;
@@ -342,7 +354,7 @@ const db = getFirestore(app);
       }
     }
 
-    // Realiza o logout
+    // Handle logout
     function handleLogout() {
       signOut(auth).then(() => {
         console.log("Usuário desconectado.");
@@ -352,7 +364,6 @@ const db = getFirestore(app);
       });
     }
 
-    // Configuração dos event listeners
     document.addEventListener("DOMContentLoaded", function() {
       const menuIcon = document.querySelector(".menu-icon");
       if (menuIcon) {
@@ -393,6 +404,331 @@ const db = getFirestore(app);
       const saveStatusMessage = document.getElementById("saveStatusMessage");
       if (saveStatusMessage) saveStatusMessage.innerText = "";
     });
+  </script>
+
+  <style>
+    :root {
+      --color-primary: #0033A0; /* Azul */
+      --color-secondary: #C8102E; /* Vermelho */
+      --color-light: #ffffff;     /* Branco */
+      --color-dark: #333;
+    }
+    /* Reset e estilos globais */
+    * {
+      box-sizing: border-box;
+      margin: 0;
+      padding: 0;
+      font-family: Arial, sans-serif;
+    }
+    body {
+      background: var(--color-light);
+      line-height: 1.6;
+      color: var(--color-dark);
+    }
+    .container {
+      max-width: 800px;
+      margin: 100px auto 20px auto; /* Espaço superior para que o conteúdo não fique sob o header fixo */
+      padding: 20px;
+      background: #fff;
+      border-radius: 8px;
+      box-shadow: 0 2px 10px rgba(0,0,0,0.1);
+    }
+    /* =============================
+       Cabeçalho Único (Menu, Logo e Logout)
+       ============================= */
+    header {
+      background: var(--color-light);
+      padding: 15px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      border-bottom: 1px solid #ddd;
+      z-index: 10;
+    }
+    .menu-icon {
+      font-size: 28px;
+      color: var(--color-primary);
+      cursor: pointer;
+      position: absolute;
+      left: 15px;
+      top: 50%;
+      transform: translateY(-50%);
+    }
+    .logo {
+      max-width: 120px;
+      height: auto;
+      display: block;
+    }
+    #logoutButton {
+      position: absolute;
+      right: 15px;
+      top: 50%;
+      transform: translateY(-50%);
+      background-color: var(--color-secondary);
+      color: var(--color-light);
+      border: none;
+      padding: 10px 15px;
+      border-radius: 5px;
+      cursor: pointer;
+      display: none;
+      font-weight: bold;
+      transition: background-color 0.2s;
+    }
+    #logoutButton:hover {
+      background-color: #a01d2d;
+    }
+    /* =============================
+       Popup do Menu
+       ============================= */
+    .menu-popup {
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 250px;
+      height: 100vh;
+      background: var(--color-primary);
+      box-shadow: 2px 0 5px rgba(0,0,0,0.3);
+      transform: translateX(-100%);
+      transition: transform 0.3s ease-in-out;
+      display: flex;
+      flex-direction: column;
+      padding: 20px;
+      z-index: 1000;
+    }
+    .menu-popup a {
+      color: var(--color-light);
+      font-size: 1.2em;
+      text-decoration: none;
+      padding: 12px;
+      display: block;
+      transition: background 0.2s;
+    }
+    .menu-popup a:hover {
+      background: rgba(255,255,255,0.2);
+    }
+    .menu-popup a.profile {
+      font-weight: bold;
+    }
+    .close-menu {
+      font-size: 26px;
+      color: var(--color-light);
+      cursor: pointer;
+      margin-bottom: 20px;
+      align-self: flex-end;
+    }
+    .menu-open {
+      transform: translateX(0);
+    }
+    /* =============================
+       Profile Content Styling
+       ============================= */
+    .container h2 {
+      text-align: center;
+      margin-bottom: 20px;
+      color: var(--color-primary);
+    }
+    .profile-section {
+      margin-bottom: 20px;
+      padding: 15px;
+      border: 1px solid #eee;
+      border-radius: 5px;
+      background-color: #f9f9f9;
+    }
+    .profile-section h3 {
+      color: var(--color-secondary);
+      margin-top: 0;
+      margin-bottom: 10px;
+      border-bottom: 1px solid #ddd;
+      padding-bottom: 5px;
+    }
+    .form-group {
+      margin-bottom: 15px;
+    }
+    .form-group label {
+      display: block;
+      margin-bottom: 5px;
+      font-weight: bold;
+      color: var(--color-primary);
+    }
+    .form-group input[type="text"],
+    .form-group input[type="email"],
+    .form-group input[type="tel"] {
+      width: 100%;
+      padding: 10px;
+      border: 1px solid #ccc;
+      border-radius: 4px;
+      font-size: 1em;
+    }
+    button {
+      background-color: var(--color-secondary);
+      color: var(--color-light);
+      border: none;
+      padding: 10px 15px;
+      border-radius: 5px;
+      cursor: pointer;
+      font-size: 1em;
+      font-weight: bold;
+      transition: background-color 0.2s;
+      margin-top: 10px;
+    }
+    button:hover:not(:disabled) {
+      background-color: #a01d2d;
+    }
+    button:disabled {
+      background-color: #cccccc;
+      cursor: not-allowed;
+    }
+    #recaptcha-container {
+      margin: 20px auto;
+      width: 304px;
+      display: none;
+    }
+    #phoneStatusMessage, #saveStatusMessage {
+      margin-top: 10px;
+      font-weight: bold;
+    }
+    /* =============================
+       Footer
+       ============================= */
+    footer {
+      background: var(--color-secondary);
+      color: var(--color-light);
+      text-align: center;
+      padding: 20px 0;
+      margin-top: auto;
+      width: 100%;
+    }
+    footer p {
+      font-size: 0.9em;
+    }
+    .whatsapp-float {
+      position: fixed;
+      bottom: 20px;
+      right: 20px;
+      background: #25D366;
+      color: var(--color-light);
+      border-radius: 50%;
+      width: 60px;
+      height: 60px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      font-size: 30px;
+      z-index: 1000;
+      box-shadow: 2px 2px 3px rgba(0,0,0,0.3);
+    }
+    .whatsapp-float i {
+      font-size: 30px;
+    }
+    @media (max-width: 768px) {
+      .menu-icon {
+        font-size: 24px;
+      }
+      .logo {
+        max-width: 100px;
+      }
+      .container {
+        margin-top: 70px;
+        padding: 15px;
+      }
+      #recaptcha-container {
+        width: 100%;
+        display: flex;
+        justify-content: center;
+      }
+    }
+  </style>
+</head>
+<body>
+  <!-- Cabeçalho Único (Menu, Logo e Logout) -->
+  <header>
+    <div class="container-header">
+      <i class="fas fa-bars menu-icon"></i>
+      <img src="https://raw.githubusercontent.com/Swifthubcatalao/br/main/imagens/logo.png" alt="Logo Swift Hub Catalão" class="logo">
+      <button id="logoutButton">Sair</button>
+    </div>
+  </header>
+
+  <!-- Popup do Menu -->
+  <div id="menuPopup" class="menu-popup">
+    <span class="close-menu">&times;</span>
+    <a href="index.html">Início</a>
+    <a href="perfil.html" class="profile">Meu Perfil</a>
+    <a href="login.html">Login</a>
+  </div>
+
+  <!-- Conteúdo do Perfil -->
+  <main class="container">
+    <h2>Meu Perfil</h2>
+
+    <div class="profile-section">
+      <h3>Informações de Conta</h3>
+      <div class="form-group">
+        <label for="userEmail">Email:</label>
+        <input type="email" id="userEmail" value="carregando..." disabled>
+      </div>
+    </div>
+
+    <div class="profile-section">
+      <h3>Telefone</h3>
+      <p id="phoneVerificationStatus">Carregando status do telefone...</p>
+      <p id="phoneStatusMessage" style="font-size: 0.9em;"></p>
+
+      <form id="sendCodeForm">
+        <div id="sendCodeSection">
+          <div class="form-group">
+            <label for="userPhone">Número de Telefone (Digite sem o código):</label>
+            <input type="tel" id="userPhone" required placeholder="Ex: 62981234567">
+          </div>
+          <div id="recaptcha-container"></div>
+          <button type="submit" id="sendCodeButton">Enviar Código</button>
+        </div>
+      </form>
+
+      <form id="verifyCodeForm" style="display: none;">
+        <div id="verifyCodeSection">
+          <div class="form-group">
+            <label for="verificationCode">Código de Verificação:</label>
+            <input type="text" id="verificationCode" required placeholder="Digite o código recebido por SMS">
+          </div>
+          <button type="submit" id="verifyCodeButton">Verificar Código</button>
+        </div>
+      </form>
+    </div>
+
+    <div class="profile-section">
+      <h3>Dados Pessoais</h3>
+      <form id="profileForm">
+        <div class="form-group">
+          <label for="userName">Nome Completo:</label>
+          <input type="text" id="userName" placeholder="Seu nome completo">
+        </div>
+        <div class="form-group">
+          <label for="userAddress">Endereço:</label>
+          <input type="text" id="userAddress" placeholder="Seu endereço completo">
+        </div>
+        <p id="saveStatusMessage" style="font-size: 0.9em;"></p>
+        <button type="submit" id="saveProfileButton">Salvar Perfil</button>
+      </form>
+    </div>
+  </main>
+
+  <footer>
+    <div class="container-footer">
+      <p>&copy; 2025 Swift Hub Catalão. Todos os direitos reservados.</p>
+    </div>
+  </footer>
+
+  <a href="https://wa.me/64981226078" class="whatsapp-float" target="_blank">
+    <i class="fab fa-whatsapp"></i>
+  </a>
+
+  <script type="module">
+    // Os event listeners e inicializações foram configurados no bloco de script acima.
   </script>
 </body>
 </html>
